grml-desktop (0.2.2) unstable; urgency=low

  * /etc/skel/.pekwm/menu: replace /etc/X11/pekwm/deb-menu
    with /etc/pekwm/debian-menu. [Closes: issue438]

 -- Michael Prokop <mika@grml.org>  Sat, 14 Feb 2009 17:38:26 +0100

grml-desktop (0.2.1) unstable; urgency=low

  * Drop linneighborhood from idesktop (see #466489).
    Thanks to Thomas Köhler for reporting. [Closes: issue561]

 -- Michael Prokop <mika@grml.org>  Sat, 25 Oct 2008 12:35:56 +0200

grml-desktop (0.2.0) unstable; urgency=low

  * Drop obsolete muttng from /etc/skel/.fluxbox/menu and
    /etc/skel/.pekwm/menu, thanks jpjacobs!
  * Drop ion stuff and remove it from Suggests as well,
    use window manager 'awesome' instead!
  * Adjust VCS headers (move from hg to git).
  * Bump Standard Version to 3.8.0 (no further changes).

 -- Michael Prokop <mika@grml.org>  Tue, 30 Sep 2008 23:44:42 +0200

grml-desktop (0.1-7) unstable; urgency=low

  * Update /etc/skel/.fluxbox/init + /etc/skel/.fluxbox/keys.
    This fixes the b0rken look'n'feel of fluxbox in recent grml
    develreleases.

 -- Michael Prokop <mika@grml.org>  Sun, 14 Oct 2007 00:09:20 +0200

grml-desktop (0.1-6) unstable; urgency=low

  * Update /etc/skel/.apwalrc.xml.

 -- Michael Prokop <mika@grml.org>  Sun,  6 May 2007 15:51:06 +0200

grml-desktop (0.1-5) unstable; urgency=low

  * Add configuration /etc/skel/.apwalrc.xml for apwal and include
    it within fvwm-crystal configuration (as right mouse click).

 -- Michael Prokop <mika@grml.org>  Sun,  6 May 2007 00:45:12 +0200

grml-desktop (0.1-4) unstable; urgency=low

  * /etc/skel/.fluxbox/keys: configure Alt+Shift+F# aus SendToWorkspace.
    Use Alt+Shift+<cursorkey> for Switching between Desktops instead of
    Alt+<cursorkey> (so it does not break for example Fire^WIceweasel).

 -- Michael Prokop <mika@grml.org>  Sun, 15 Apr 2007 22:06:35 +0200

grml-desktop (0.1-3) unstable; urgency=low

  * Provide package for all architectures.
