@@ -9,13 +9,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-configure-stamp:
-	dh_testdir
-	touch configure-stamp
-
 build: build-stamp
 
-build-stamp: configure-stamp 
+build-stamp:
 	dh_testdir
 	touch $@
 
